<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item1"
            android:title="@string/perfil" />

        <item
            android:id="@+id/item2"
            android:title="@string/descripción" />

        <item
            android:id="@+id/item3"
            android:title="@string/personajes" />

        <item
            android:id="@+id/item4"
            android:title="@string/objetos" />

        <item
            android:id="@+id/item5"
            android:title="@string/tips" />

        <item
            android:id="@+id/item6"
            android:title="@string/ajustes" />

        <item
            android:id="@+id/item7"
            android:title="@string/cerrarSesion" />

    </group>
</menu>