<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielmartinez.task2danielmartinez.activities.RegistroActivity"
    android:orientation="vertical">


    <EditText android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introducirNombre"/>

    <EditText android:id="@+id/editApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introducirApellidos"/>

    <EditText android:id="@+id/editNick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introducirNick"/>

    <EditText android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introducirCorreo"/>

    <EditText android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introducirContraseña"
        android:inputType="textPassword"/>

    <EditText android:id="@+id/editPass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmarContraseña"
        android:inputType="textPassword"/>

        <Button android:id="@+id/btnRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:layout_gravity="center"
            android:layout_marginTop="30px"/>

</LinearLayout>
